# lean-renderer

./: CMakeLists.txt  README.md  imgui.ini
models/dev_white_cube/: dev_white_cube.mtl
shaders/: fs.frag  light.frag  model.frag  model.vert  picking.frag  picking.vert  vs.vert
src/: game.hpp  main.cpp  shader.cpp  shader.hpp  window.cpp  window.hpp
src/render/: camera.cpp  camera.hpp  frame_buffer.cpp  frame_buffer.hpp  model.cpp  model.hpp  opengl_context.cpp  opengl_context.hpp  shader.cpp  shader.hpp  ui_context.cpp  ui_context.hpp
src/render/game_object/: game_object.cpp  game_object.hpp  mesh.cpp  mesh.hpp  texture.cpp  texture.hpp
src/ui/: console_panel.cpp  console_panel.hpp  inspector_panel.cpp  inspector_panel.hpp  objects_panel.cpp  objects_panel.hpp  scene_panel.cpp  scene_panel.hpp
src/ui/components/: vec3_control.hpp
